--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     ],
     "require": {
         "slim/slim": "^3.8",
-        "gabordemooij/redbean": "^4.3"
+        "gabordemooij/redbean": "^4.3",
+        "slim/php-view": "^2.2"
     }
 }
