--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,10 @@
         "slim/slim": "^3.8",
         "gabordemooij/redbean": "^4.3",
         "slim/php-view": "^2.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "Paooolino\\": "web/src"
+        }
     }
 }
