--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
 		"start": "node start",
+		"db-setup": "node db-setup",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
