--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
 		"start": "node start",
 		"db-setup": "node db-setup",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "phpunit tests"
   },
   "repository": {
     "type": "git",
